[gd_scene load_steps=3 format=3 uid="uid://debug_console"]

[ext_resource type="Script" path="res://Scripts/manager/debug_console.gd" id="1_debug_console"]
[ext_resource type="FontFile" uid="uid://d205ajxmhvyn7" path="res://AssetBundle/Uranus_Pixel_11Px.ttf" id="2_console_font"]

[node name="DebugConsole" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_debug_console")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="ConsoleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="TitleLabel" type="Label" parent="ConsoleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_console_font")
theme_override_font_sizes/font_size = 24
text = "调试控制台"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ConsoleContainer"]
layout_mode = 2
theme_override_constants/separator = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ConsoleContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputContainer" type="VBoxContainer" parent="ConsoleContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="ConsoleContainer"]
layout_mode = 2
theme_override_constants/separator = 2

[node name="InputContainer" type="HBoxContainer" parent="ConsoleContainer"]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="ConsoleContainer/InputContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_console_font")
theme_override_font_sizes/font_size = 18
text = ">"

[node name="InputLine" type="LineEdit" parent="ConsoleContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "输入指令..."
theme_override_fonts/font = ExtResource("2_console_font")
theme_override_font_sizes/font_size = 18
caret_color = Color(0, 1, 0, 1)